layout.css
/* ... */
.titleBar__text {
  flex: 1;
  padding-right: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  pointer-events: none;
}

.titleBar__button {
  display: flex;
  width: 16px;
  height: 14px;
  padding: 0;
  border: none;
  background-color: var(--3d-controls-background);
  color: var(--3d-controls-foreground);
  align-items: center;
  justify-content: center;
  box-shadow: inset -1px -1px var(--3d-controls-frame),
    inset 1px 1px var(--3d-controls-highlight),
    inset -2px -2px var(--3d-controls-shadow),
    inset 2px 2px var(--3d-controls-face);
}

.titleBar__button:active {
  padding: 2px 0 0 2px;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-frame),
    inset -2px -2px var(--3d-controls-face),
    inset 2px 2px var(--3d-controls-shadow);
}

.titleBar__button.close {
  margin-left: 2px;
}

/* toolbars */
.toolbars {
  margin: 1px 1px 4px 0;
  border: 1px solid var(--3d-controls-shadow);
  box-shadow: 0 1px var(--3d-controls-highlight),
    1px 0 var(--3d-controls-highlight),
    1px 1px var(--3d-controls-highlight);
}

.toolbar {
  display: flex;
  flex-flow: row nowrap;
  padding: 1px 2px;
  border-top: 1px solid var(--3d-controls-highlight);
  border-left: 1px solid var(--3d-controls-highlight);
  box-shadow: 0 -1px inset var(--3d-controls-shadow);
  overflow: hidden;
}

.toolbar__thumb {
  width: 3px;
  flex: 3px 0 0;
  margin: 2px 3px;
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-highlight);
}

.toolbar__menuItem {
  flex-grow: 0;
  flex-shrink: 0;
  margin: 0;
  padding: 3px 8px;
  border: none;
  border-radius: 0;
  background: none;
  text-align: start;
  line-height: 1;
  white-space: nowrap;
  user-select: none;
}

.toolbar__menuItem:hover {
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-highlight);
}

.toolbar__menuItem:active {
  padding: 4px 7px 2px 8px;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow);
}

.toolbar__button {
  display: flex;
  flex-flow: column;
  align-items: center;
  text-align: center;
  min-width: 54px;
  padding: 2px 3px 3px;
}

.toolbar__button:hover {
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-highlight);
}

.toolbar__button:active {
  padding: 3px 2px 2px 4px;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow);
}

.toolbar__button:not(:hover) .toolbar__buttonIcon {
  filter: grayscale(1);
}

.toolbar__buttonIcon {
  width: 22px;
  height: 22px;
  image-rendering: pixelated;
}

.toolbar__buttonText {
  margin-top: 2px;
  line-height: 1;
  white-space: nowrap;
}

.toolbar__separator {
  border-left: 1px solid var(--3d-controls-shadow);
  box-shadow: 1px 0px var(--3d-controls-highlight);
  margin: 2px 3px 2px 2px;
}

.toolbar__spacer {
  flex: 1;
}

.toolbar__text {
  margin: 0 2px;
  align-self: center;
}

.toolbar__addressBar {
  width: 100%;
  height: 22px;
  display: flex;
  align-items: center;
  padding: 0 2px;
  background: var(--input-background);
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow),
    inset -2px -2px var(--3d-controls-face),
    inset 2px 2px var(--3d-controls-frame);
  white-space: nowrap;
  overflow: hidden;
}

.toolbar__addressBarIcon {
  width: 16px;
  height: 16px;
  image-rendering: pixelated;
  margin: 0 2px;
}

.toolbar__addressBarText {
  flex: 1;
  cursor: var(--input-cursor), text;
  margin: 0 4px;
}

.toolbar__addressBarButton {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 16px;
  height: 18px;
  background: var(--3d-controls-background);
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-face),
    inset -2px -2px var(--3d-controls-frame),
    inset 2px 2px var(--3d-controls-highlight);
}

.toolbar__addressBarButton:active {
  box-shadow: inset 1px 1px var(--3d-controls-shadow),
    inset -1px -1px var(--3d-controls-shadow);
}

/* status bar */
.statusBar {
  width: 100%;
  height: 20px;
  display: flex;
  flex-flow: row nowrap;
  gap: 2px;
  padding-top: 2px;
  font: 11px 'MS Sans Serif Regular', sans-serif;
  background: var(--3d-controls-background);
}

.statusBar__section {
  display: flex;
  padding: 0 2px;
  flex-flow: row nowrap;
  align-items: center;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.statusBar__icon {
  margin-right: 4px;
}

/* desktop */
.desktop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-bottom: 32px;
  display: grid;
  grid-auto-flow: column;
  grid-template-rows: repeat(auto-fill, 74px);
  grid-auto-columns: 74px;
  background-color: var(--desktop-background-color);
  background-image: var(--desktop-background-image);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  z-index: -1;
  user-select: none;
}

.desktopIcon {
  position: relative;
  display: flex;
  flex-flow: column;
  align-items: center;
  width: 74px;
  z-index: -1;
}

.desktopIcon__image {
  width: 32px;
  height: 32px;
  image-rendering: pixelated;
}

.desktopIcon__text {
  display: -webkit-box;
  text-align: center;
  word-wrap: break-word;
  white-space: break-spaces;
  overflow: hidden;
  background: var(--desktop-background-color);
  color: var(--desktop-foreground);
  font: 11px 'MS Sans Serif Regular', sans-serif;
  margin-top: 6px;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}
/* ... */

